# scientific-portfolio-11-07-26-

./: .gitignore  README.md
projects/01-rna-hairpin-molecular-dynamics/: 01_download_force_field.sh  02_build_charmm_rna_system.sh  03_prepare_molecular_dynamics.sh  04_equilibrate_system.sh  05_run_production_md.sh  06_analyze_thermodynamics.sh  07_prepare_trajectories.sh  08_calculate_trajectory_metrics.sh  09_calculate_hairpin_index.sh  10_analyze_hairpin_metrics.sh  11_summarize_replicates.sh  12_build_global_summary.sh  13_measure_hairpin_distance.sh  14_build_summary_table.py  LICENSE  README.md
projects/02-gba-virtual-screening/: README.md  run_virtual_screening_pipeline.sh
projects/03-stroke-rehabilitation-eeg/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
projects/03-stroke-rehabilitation-eeg/.github/workflows/: tests.yml
projects/03-stroke-rehabilitation-eeg/r/: create_publication_figures.r
projects/03-stroke-rehabilitation-eeg/scripts/: bootstrap.py  run_eeg_pipeline.py  stage_01_validate_eeg_data.py  stage_02_run_decoding_analysis.py  stage_03_export_diagnostics.py  stage_04_analyze_channel_contributions.py  stage_05_create_figures.py
projects/03-stroke-rehabilitation-eeg/src/stroke_rehab/: __init__.py  config.py  diagnostics.py  electrode_analysis.py  epochs.py  evaluation.py  features.py  io.py  modeling.py  plotting.py  preprocessing.py  validation.py
projects/03-stroke-rehabilitation-eeg/tests/: test_eeg_pipeline.py
projects/04-mosquito-mitogenomics/: README.md
projects/05-mosquito-methylome/: README.md  (+1 more)
(+105 files in other folders)
