[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stroke-rehab-eeg-pipeline"
version = "0.1.0"
description = "Reproducible EEG motor-imagery decoding pipeline for pre/post stroke rehabilitation analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "h5py",
  "scikit-learn",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
